--- a/CPP_programming/010NameSp1/010NameSp1.vcxproj.filters
+++ b/CPP_programming/010NameSp1/010NameSp1.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="ConsoleApplication1.cpp">
+    <ClCompile Include="010NameSp1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
