--- a/CPP_programming/Q01-3-1/Q01-3-1.vcxproj.filters
+++ b/CPP_programming/Q01-3-1/Q01-3-1.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="test2.cpp">
+    <ClCompile Include="Q0131.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
